--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,7 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "elf2uf2-rs -d"
+# runner = "elf2uf2-rs -d"  # USB書き込み／リセット
+# runner = "probe-rs download --chip RP2040"  # デバッグプローブで書き込みのみ
+runner = ".\\probe_flash.bat"  # デバッグプローブで書き込み／リセット
 
 [build]
 target = "thumbv6m-none-eabi"        # Cortex-M0 and Cortex-M0+
